[Chore] 코드 정리